Help with issue #127 with checkmark overlapping title

--- a/app/styles/components/_project-card.scss
+++ b/app/styles/components/_project-card.scss
@@ -62,6 +62,7 @@ project-card {
   .title {
     display: block;
     margin-bottom: 8px;
+    padding-right: 10px;
     vertical-align: top;
     .ion-checkmark-circled {
       color: $lime;
